syntax = "proto3";
package TesteProtobuf.protos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message PersonProtos {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

// Our address book file is just one of these.
message AddressBookProtos {
  repeated PersonProtos people = 1;
}

message MeuCabecalho {
	int32 id = 1;
	int32 tipo = 2;
}

message MeusDados {
	int32 id = 1;
	string texto = 2;
}

message MeuPacote {
	MeuCabecalho header = 1;
	MeusDados    data = 2;
}
